force-app/main/default/objects/FuelExceptionDateMgmt__c/FuelExceptionDateMgmt__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>조직별 설정된 주유비 입력/신청 가능 기간 내에 주유비를 입력하지 못한 사용자들이 주유비 신청을 진행할수 있도록 예외신청 기간을 설정할수 있는 기능</description>
    <label>개인별 주유비 신청 가능 기간 예외처리 설정</label>
</CustomObject>