force-app/main/default/objects/FuelExceptionDateMgmt__c/fields/MinDateTime__c.field-meta.xml
<CustomField>
    <fullName>MinDateTime__c</fullName>
    <label>주유비 신청 가능 일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>