force-app/main/default/objects/FuelExceptionDateMgmt__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>예외시작일</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>